<resources>
    <string name="app_name">MaPle</string>
    <string name="title_home">My page</string>
    <string name="title_explore">Explore</string>
    <string name="title_friends">好友</string>
    <string name="btchat">聊天</string>
    <string name="userlink">Name</string>
    <string name="intro">Intro</string>
    <string name="textTitle_FLists">Friends List</string>
    <string name="match">Match</string>
    <string name="textTitle_Match">隨機配對好友</string>
    <string name="menumatch">Match</string>
    <string name="payment">升級VIP</string>
    <string name="msg_NoCameraAppsFound">No camera apps found</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="name">姓名</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>
    <string name="vipStatus">方案</string>
    <string name="no">No</string>
    <string name="premium_plan">Premium Plan</string>
    <string name="selfIntrodution">自我介紹</string>
    <string name="save">儲存</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="title_Markers">Markers</string>
    <string name="marker_snippet_taipei">台灣</string>
    <string name="marker_snippet_Kaohsiung">台灣</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="cancel">取消</string>
    <string name="msg_Nonetwork">no network connection available</string>
    <string name="pick_a_photo_from">選取照片來源:</string>
    <string name="no_Image">No image</string>
    <string name="Send">send</string>
    <string name="send">Send</string>
    <string name="currentlocation">Current location</string>
    <string name="otherlocation">Other location</string>
    <string name="no_data_from_db">尚未有資料</string>
    <string name="visited_countries">已拜訪過的國家</string>
    <string name="asia">亞洲</string>
    <string name="europe">歐洲</string>
    <string name="northAmerica">北美洲</string>
    <string name="southAmerica">南美洲</string>
    <string name="africa">非洲</string>
    <string name="oceania">大洋洲</string>
    <string name="default_resulta">(0/51)     0.0%</string>
    <string name="default_resulte">(0/46)     0.0%</string>
    <string name="default_resultna">(0/37)     0.0%</string>
    <string name="default_resultsa">(0/14)     0.0%</string>
    <string name="default_resultaa">(0/28)     0.0%</string>
    <string name="default_resultaf">(0/58)     0.0%</string>
    <string name="addNewPost">New Post</string>
    <string name="charts">Charts</string>
    <string name="current">Current Location</string>
    <string name="map">Map</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="hint_etLocationName">請輸入地址...</string>
    <string name="btConfirm">確定</string>
    <string name="btbacktonewpost">confirm and Back</string>
    <string name="btback">Back</string>
    <string name="postedDate">Posted Date:</string>
    <string name="msg_insertFail">Order Data Insert Fail</string>
    <string name="msg_InsertSuccess">Order Data Insert Success</string>
    <string name="msg_NoFriendsFound">尚未建立朋友清單</string>
    <string name="msg_NoNetwork">請檢查網路連線</string>
    <string name="msg_NoPost">This Posted dont exist</string>
    <string name="title_delete">刪除</string>
    <string name="title_modify">修改</string>
    <string name="yes">Yes</string>
    <string name="invite">Invite</string>
    <string name="msg_NoMatchFriendsFound">沒有可配對的朋友</string>
    <string name="msg_RejectFriend">您已經拒絕</string>
    <string name="msg_RejectFriendFail">拒絕失敗</string>
    <string name="msg_LikeFriendFail">發送邀請失敗</string>
    <string name="msg_LikeFriend">您已經接受交友邀請</string>
    <string name="textTitle_Invite">好友邀請函</string>
    <string name="btSubmit">Submit</string>
    <string name="btok">Ok</string>
    <string name="search">搜尋</string>
    <string name="title_activity_mypage_tab_map_fragment">Mypage_tab_map_fragment</string>
    <string name="textTitle_Chat">聊天</string>
    <string name="text_NoCameraApp">沒有能啟用的相機應用程式</string>
    <string name="text_Message">聊天訊息不可為空</string>
    <string name="text_MessageEmpty">聊天訊息不可為空</string>
    <string name="textTitle">Maple</string>
    <string name="paymentAgreement">尊榮會員升等服務 \n 現在升等VIP立即開啟聊天室功能~!
        \n\n 1. 簡介\n適用條款。感謝您使用 Google Play。Google Play 是由 Google LLC (以下簡稱「Google」或「我們」；地址為 1600 Amphitheatre Parkway, Mountain View California 94043, USA) 所提供的服務。您在使用 Google Play 及該服務所提供的應用程式 (包括 Android 免安裝應用程式)、遊戲、音樂、電影、書籍、雜誌，或是其他數位內容或服務 (以下簡稱「內容)」) 時，必須遵守本《Google Play 服務條款》和《Google 服務條款》(以下簡稱《Google ToS》)，以下兩者合稱「條款」。如《Google ToS》所述，Google Play 為一種「服務」。如《Google Play 服務條款》和《Google ToS》之間有所牴觸，應以《Google Play 服務條款》為準。
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btprofile">個人頁面</string>
    <string name="paymentAlertTitle">內購尊榮會員升等服務</string>
    <string name="paymentAgreement">尊榮會員升等服務 \\n 現在升等VIP立即開啟聊天室功能~!         \\n\\n 1. 簡介\\n適用條款。感謝您使用 Google Play。Google Play 是由 Google LLC (以下簡稱「Google」或「我們」；地址為 1600 Amphitheatre Parkway, Mountain View California 94043, USA) 所提供的服務。您在使用 Google Play 及該服務所提供的應用程式 (包括 Android 免安裝應用程式)、遊戲、音樂、電影、書籍、雜誌，或是其他數位內容或服務 (以下簡稱「內容)」) 時，必須遵守本《Google Play 服務條款》和《Google 服務條款》(以下簡稱《Google ToS》)，以下兩者合稱「條款」。如《Google ToS》所述，Google Play 為一種「服務」。如《Google Play 服務條款》和《Google ToS》之間有所牴觸，應以《Google Play 服務條款》為準。</string>
</resources>

