<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rtLayout"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="top"
        android:layout_margin="35dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layoutpost"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ibPhoto"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:onClick="onPhotoClick" />



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rtLayout"
        android:layout_marginTop="-20dp">



        <Button
            android:id="@+id/btcurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/button_shape"
            android:text="@string/current" />

        <Button
            android:id="@+id/btmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/button_shape"
            android:text="@string/map"/>






    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/rl01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivMarker"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/icon_marker" />
        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="250dp"
            android:layout_height="36dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl01"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/etComment"
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/layoutpost"
            android:gravity="top"
            android:hint="@string/what_s_new"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/btcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="128dp"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>














