<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    app:cardBackgroundColor="@color/colorGray"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/rlcardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal"
        android:padding="6dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/p01" />
        <Button
            android:id="@+id/btChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/btchat"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="15sp"
            android:padding="20dp"
            android:onClick="onChatClick" />

    </LinearLayout>
        <LinearLayout
            android:id="@+id/llId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/userlink"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/intro" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>