<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    app:cardBackgroundColor="@color/colorGray"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rlcardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--<ImageView-->
                <com.makeramen.roundedimageview.RoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:riv_border_color="@color/colorWhite"
                    app:riv_border_width="2dip"
                    app:riv_corner_radius="20dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/userlink"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="onChatClick"
                    android:text="@string/btchat"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onProfileClick"
                    android:text="@string/btprofile"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
                <!--android:id="@+id/tvIntro"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="8dp"-->
                <!--android:text="@string/intro" />-->
        <!--</LinearLayout>-->
    </LinearLayout>
</android.support.v7.widget.CardView>